both add and remove train buttons working

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Train Scheduler</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/journal/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </head>
@@ -35,7 +37,7 @@
 
 	<!--panel that holds form to add trains-->
 	<div class = "panel panel-success">
-		<div class = "panel-heading">Add Train</div>
+		<div class = "panel-heading">Add/Remove Train</div>
 		<div class = "panel-body">
 			<form>
 				 <div class="form-group">
