possibly my final

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     				<tr>
     					<th>Train Name</th>
     					<th>Destination</th>
-    					<th>Frequency</th>
+    					<th>Frequency (minutes)</th>
     					<th>Arrival Time</th>
     					<th>Minutes to Arrival</th>
     				</tr>
